refactor #57: 주석 제거 및 최적화